# gen-tree

./: .gitignore  Box.js  Edge.js  FamilyTree.js  GenealogicalTree.js  GraphicalElement.js  InteractiveELement.js  Point.js  README.md  TreeBuilder.js  Vertex.js  dataSample.js  index.html  main.py  pattern.html  pyproject.toml  requirements.txt  script.js  style.css  utils.js
.github/: deploy.yml
.github/workflows/: deploy.yml
gentree/: __init__.py  api.py  auth.py  db.py  gentree.py  homepage.py  hot_reloading.py  user.py  utils.py  wsgi.py
gentree/auth/: forms.py  views.py
gentree/db/: neo_driver.py
gentree/db/queries/: get_all_choices.cypher  get_choices_by_sex.cypher  get_tree_and_members.cypher  get_trees_of_gentree.cypher  get_user.cypher  get_user_available_gentrees.cypher  get_user_status_on_gentree.cypher
gentree/gentree_viz/: __init__.py  forms.py  schemas.py  views.py
gentree/gentree_viz/api/: __init__.py  schemas.py  views.py
gentree/graph/: __init__.py  forms.py  views.py
gentree/graph/api/: views.py
gentree/main/: __init__.py  views.py
gentree/static/script/: alpineController.js  canvas.js  types.js
gentree/templates/: base.html  gentree.html  index.html
gentree/templates/auth/: login.html  register.html  registration-completed.html
gentree/templates/forms/: family-form.html
src/: manage.py
src/gentree/: asgi.py  settings.py  urls.py  wsgi.py
src/genviz/: apps.py  forms.py  models.py  urls.py  views.py
static/script/: alpineController.js  types.js
templates/: base.html  family-form.html  index.html
(+54 files in other folders)
