[project]
name = "gen-tree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "django-browser-reload>=1.18.0",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "django-neomodel>=0.2.0",
    "django-widget-tweaks>=1.5.0",
    "djangorestframework>=3.16.0",
]
