[project]
name = "gentree"
version = "0.1.0"
description = "An web app to display genealogical tree"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "livereload>=2.7.1",
    "neo4j>=5.28.1",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
]
